--- a/views/index.ejs
+++ b/views/index.ejs
@@ -126,10 +126,11 @@
 								<p class="bottom-margin" id="aboutText">genesisbarrios:~$ cd genesisbarrios/About </p>
 								<br>
 								<p class="bottom-margin" id="aboutText2">Hello! My name is Genesis Barrios. I'm a Software Engineer based in Miami, Florida. 🌴 </p>
-								<p class="bottom-margin white">I got my Bachelor's of Science in Computer Science in Spring of 2020 from Florida International University.</p>
-								<p class="bottom-margin white">I've been working as a Software Engineer for the past four years at Assurant, where I build and support applications in the Azure cloud.</p>
-								<p class="bottom-margin white">I'm a Full Stack Engineer having worked with various technologies including Javascript, JQuery, Angular, React, Node.js, MongoDB, Firebase, SQL, MySQL, MicrosoftSQL, Tomcat, Java, C#, .NET, and Web GL(Babylon.js, one.js).</p>
-								<p class="bottom-margin white">I'm currently dedicating my free time to learning and building with Web3 technologies like Soldiity and Web3.js. I love building creative solutions for myself and others, and I offer support through <a href='https://www.enigma-labs.com' style='font-weight:bold;' target='_blank'>Enigma Labs.</p>
+								<p class="bottom-margin white">I got my Bachelor's of Science in Computer Science in 2020 from Florida International University, and I worked as a Software Engineer for four years at Assurant, where I built and supported SMS and Billing applications in the Azure cloud as well as creating new components that sped up many processes.</p>
+								<p class="bottom-margin white">I'm a Full Stack Engineer having worked with various technologies including Javascript, Typescript, Tailwind, React, Next.js Node.js, MongoDB, Firebase, SQL, MySQL, MicrosoftSQL, Tomcat, Java, C#, .NET, and Web GL(Babylon.js, three.js).</p>
+								<p class="bottom-margin white">And an Artist, Music Producer, and Audio Engineer, dedicating practically my whole life since 8 years old to learning everything I can about music. I am currently engineering at two studios. </p>
+								<p class="bottom-margin white">I'm currently building my freelancing business <a href='https://www.enigma-labs.com' style='font-weight:bold;' target='_blank'>Enigma Labs</a>- offering Web Development, Music Production, Audio Engineering, and Visuals.</p>
+								<p class="bottom-margin white"><a href='https:/genwav.xyz/OS' style='font-weight:bold;' target='_blank'>My Music</a></p>
 							</div>
 						</div>
 						<div class="col-1">
