--- a/views/index.ejs
+++ b/views/index.ejs
@@ -179,7 +179,7 @@
 
 	<section class="projects d-flex two">
 		<div class="project justify-content-center align-self-center">
-			<img src="https://dl.dropboxusercontent.com/s/qbkbw3fk1ektovl7q10ux/Screenshot-2024-08-11-at-3.39.30-AM.png?rlkey=yht8u9osq5zomxba1vidqvzf1&st=nnzcj4mu&dl=0" alt="Enigma Software Consulting"/>
+			<img src="https://dl.dropboxusercontent.com/s/k2d8krq278twtehvl9okl/enigma.gif?rlkey=rbanv9bj28d939dfyfswbb8bi&st=s0coa121&dl=0" alt="Enigma Software Consulting"/>
 			<h2>Enigma Labs</h2>
 			<p class="serif" style="margin-bottom:2px;"> June 2024 </p>
 			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;"> I launched my consulting business along with a website built with React and one.js, and with a blog that is supported by a Firebase database.</p>
