link enigma gif

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -153,7 +153,7 @@
 	<h1 id="projectsTitle">Projects</h1>
 	</div>
 
-	<section class="projects d-flex two">
+	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center"> 
 			<img src="https://dl.dropboxusercontent.com/s/tajdsorx5orutffrzm47j/twitter-banner.png?rlkey=x569kx3odu5dbrzdrf6jn7iaw&st=kusyr3s5&dl=0" alt="influanto"/>
 			<h2>Influanto</h2>
@@ -161,18 +161,6 @@
 			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;"> As a part of Nights & Weekends Season 5 hosted by <a href="https://buildspace.so" target="_blank">Buildspace</a> I have taken the leap and started building two of the ideas I've had for a while which is an all in two marketing tool for musicians and content creators. Built with Next.js.</p>
 			<div class="row" style="margin-bottom:5px;">
 				<a href="https://www.influanto.com" target="_blank" class="view-button"> View Website </a>
-			</div>
-		</div>
-	</section>
-
-	<section class="projects d-flex one">
-		<div class="project justify-content-center align-self-center"> 
-			<img src="https://dl.dropboxusercontent.com/s/hc1svqnn21ddd4wjjedpk/mars.png?rlkey=034jieiuwha3jtp43i3k7vt4t&st=pca43vll&dl=0" alt="influanto"/>
-			<h2>Mars Miami Studio Website</h2>
-			<p class="serif" style="margin-bottom:2px;">May 2024 </p>
-			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;"> I build a website for Mars Miami Studio, one of Miami's top Recording Studios and I am currently working on integrating Google APIs for Booking functionalities and more!</p>
-			<div class="row" style="margin-bottom:5px;">
-				<a href="https://www.marsmusicstudios.com" target="_blank" class="view-button"> View Website </a>
 			</div>
 		</div>
 	</section>
@@ -201,6 +189,18 @@
 		</div>
 	</section>
 
+		<section class="projects d-flex two">
+		<div class="project justify-content-center align-self-center"> 
+			<img src="https://dl.dropboxusercontent.com/s/hc1svqnn21ddd4wjjedpk/mars.png?rlkey=034jieiuwha3jtp43i3k7vt4t&st=pca43vll&dl=0" alt="influanto"/>
+			<h2>Mars Miami Studio Website</h2>
+			<p class="serif" style="margin-bottom:2px;">May 2024 </p>
+			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;"> I build a website for Mars Miami Studio, one of Miami's top Recording Studios and I am currently working on integrating Google APIs for Booking functionalities and more!</p>
+			<div class="row" style="margin-bottom:5px;">
+				<a href="https://www.marsmusicstudios.com" target="_blank" class="view-button"> View Website </a>
+			</div>
+		</div>
+	</section>
+
 	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center">
 			<img src="https://dl.dropboxusercontent.com/s/h62cze48hc8jhi6nbvtya/stempo.png?rlkey=wtv3fvqea7btj80b6jia1fjds&dl=0" alt="PanaMia"/>
@@ -218,7 +218,7 @@
 		<div class="project justify-content-center align-self-center">
 			<img src="https://dl.dropboxusercontent.com/s/lvy5auexg1w3udubrevr5/panamia.png?rlkey=p7z5ano1jbljfzy1rpua5zxil&dl=0" alt="PanaMia"/>
 			<h2>Panamia Club</h2>
-			<p class="serif" style="margin-bottom:2px;"> October 2022 - </p>
+			<p class="serif" style="margin-bottom:2px;"> October 2022 - July 2024</p>
 			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;">A personal project I am working on in my spare time, to help local artists and small-businesses. I am building a platform with the main feature being a directory of local artists, and freelancers. Built with Next.js and MongoDB, deployed on Vercel.</p>
 			
 			<div class="row" style="margin-bottom:5px;">
