link enigma gif

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -231,7 +231,7 @@
 		<div class="project justify-content-center align-self-center">
 			<img src="https://dl.dropboxusercontent.com/s/yqffuc60pnbb613lhzg68/reofound.png?rlkey=3sse6okl02sygq3cj1evif301&dl=0" alt="Refound"/>
 			<h2>Refound</h2>
-			<p class="serif" style="margin-bottom:2px;"> May 2022 - </p>
+			<p class="serif" style="margin-bottom:2px;"> May 2022 - Jan 2024</p>
 			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;">For Activate x Wormhole 2022, my team and I build an NFT platform for war time journalists that are facing lack of compensation, and safety concerns. We won the Rebuild for Ukraine Bounty awarded by the NEAR protocol, and at <a href="https://web3athon.xyz/" target="_blank">Web3athon</a> we won 3rd Place for the Celo Disaster Relief bounty. I worked on the frontend, and Solidity smart contracts.</p>
 			
 			<div class="row" style="margin-bottom:5px;">
