link enigma gif

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -158,7 +158,7 @@
 			<img src="https://dl.dropboxusercontent.com/s/tajdsorx5orutffrzm47j/twitter-banner.png?rlkey=x569kx3odu5dbrzdrf6jn7iaw&st=kusyr3s5&dl=0" alt="influanto"/>
 			<h2>Influanto</h2>
 			<p class="serif" style="margin-bottom:2px;"> June 2024 </p>
-			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;"> As a part of Nights & Weekends Season 5 hosted by <a href="https://buildspace.so" target="_blank">Buildspace</a> I have taken the leap and started building two of the ideas I've had for a while which is an all in two marketing tool for musicians and content creators. Built with Next.js.</p>
+			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;"> As a part of Nights & Weekends Season 5 hosted by <a href="https://buildspace.so" target="_blank">Buildspace</a> I have taken the leap and started building two of the ideas I've had for a while which is an all in one marketing tool for musicians and content creators. Built with Next.js.</p>
 			<div class="row" style="margin-bottom:5px;">
 				<a href="https://www.influanto.com" target="_blank" class="view-button"> View Website </a>
 			</div>
@@ -219,7 +219,7 @@
 			<img src="https://dl.dropboxusercontent.com/s/lvy5auexg1w3udubrevr5/panamia.png?rlkey=p7z5ano1jbljfzy1rpua5zxil&dl=0" alt="PanaMia"/>
 			<h2>Panamia Club</h2>
 			<p class="serif" style="margin-bottom:2px;"> October 2022 - July 2024</p>
-			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;">A personal project I am working on in my spare time, to help local artists and small-businesses. I am building a platform with the main feature being a directory of local artists, and freelancers. Built with Next.js and MongoDB, deployed on Vercel.</p>
+			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;">A personal project I am working on in my spare time, to help local artists and small-businesses. I built the first iteration of the platform with the main feature being a directory of local artists, and freelancers. Built with Next.js and MongoDB, deployed on Vercel.</p>
 			
 			<div class="row" style="margin-bottom:5px;">
 				<a href="https://www.panamia.club" target="_blank" class="view-button"> View Website </a>
