influanto image update

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -154,7 +154,7 @@
 
 	<section class="projects d-flex one">
 		<div class="project justify-content-center align-self-center"> 
-			<img src="https://dl.dropboxusercontent.com/s/tajdsorx5orutffrzm47j/twitter-banner.png?rlkey=x569kx3odu5dbrzdrf6jn7iaw&st=kusyr3s5&dl=0" alt="influanto"/>
+			<img src="https://dl.dropboxusercontent.com/s/a7lf48b7uht3dnyl59tc1/influantoHomepageLaptop.png?rlkey=pzp4yi2ns6ppjfmwb9m84t4tz&st=uxcg7w3i&dl=0" alt="influanto"/>
 			<h2>Influanto</h2>
 			<p class="serif" style="margin-bottom:2px;"> June 2024 </p>
 			<p class="serif content" style="font-size:0.8em; margin-bottom:2px;"> The all in one marketing tool for artist and musicians. Born at Nights & Weekends Season 5 hosted by <a href="https://buildspace.so" target="_blank">Buildspace</a> 1 year later we are now public with our beta version. Features: Link In Bio, Release Pages, QR Code Generator, Playlist Curator Search Tool, Split Sheet Generator, and more. Built with Ship Fast and Next.js.</p>
